
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.orientsec.matrix.v2";
option java_outer_classname = "GreeterProto";

package com.orientsec.matrix.v2;

service Greeter {
  rpc sayHello (HelloRequest) returns (HelloReply) {}
  rpc echo (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  int32  id   = 1;
  string name = 2;
  bool male = 3;
}

message HelloReply {
  string message = 1;
  int32  no      = 2;
}
